smm-ingress/smm-ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: ubuntu
    istio.io/rev: cp-v112x.istio-system
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: ubuntu
    service.istio.io/canonical-version: latest
    topology.istio.io/network: network1
  name: ubuntu
  namespace: smm-demo
spec:
  containers:
  - command:
    - sleep
    - "604800"
    image: ubuntu
    imagePullPolicy: Always
    name: ubuntu
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
